--- a/ProyectoPrensa/Form1.resx
+++ b/ProyectoPrensa/Form1.resx
@@ -120,6 +120,16 @@
   <metadata name="serialPort1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="textBox1.Text" xml:space="preserve">
+    <value>Proyecto Para el Curso de Automatización y Redes Industriales
+I Semestre 2017
+Ingenería Mecatrónica
+
+Lina Bourrouet Formoso
+Débora González Gámez
+Allison Mendoza Manzanares
+Gerónico Ruepert Belderbos</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
   </metadata>
